--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
+    ext {
+        // JetBrains
+        // https://kotlinlang.org/docs/releases.html#release-details
+        kotlin_version = '1.4.32'
+        coroutine_version = '1.4.3'
+
+        // Google
+        // https://developer.android.com/jetpack/androidx/releases/lifecycle
+        lifecycle_version = '2.3.1'
+    }
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
