--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,14 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "androidx.arch.core:core-testing:$arch_core_version"
+    testImplementation "androidx.test:runner:$androidx_test_version"
+    testImplementation "androidx.test:rules:$androidx_test_version"
+    testImplementation "androidx.test:core-ktx:$androidx_test_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
