--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@ buildscript {
         // Google
         // https://developer.android.com/jetpack/androidx/releases/lifecycle
         lifecycle_version = '2.3.1'
+        // https://developer.android.com/jetpack/androidx/releases/arch-core
+        arch_core_version = '2.1.0'
+        // https://developer.android.com/jetpack/androidx/releases/test
+        androidx_test_version = '1.3.0'
     }
     repositories {
         google()
