--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
         }
     }
 
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -35,4 +38,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    def ktxVersion = '2.3.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$ktxVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ktxVersion"
+
+    def koinVersion = '2.2.0'
+    implementation "org.koin:koin-core:$koinVersion"
+    implementation "org.koin:koin-android:$koinVersion"
+    implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
 }
