--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,20 +33,27 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+        freeCompilerArgs += ['-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi']
     }
 
     buildFeatures {
         viewBinding true
         dataBinding true
     }
-}
 
-kapt {
-    correctErrorTypes true
+    kapt {
+        correctErrorTypes true
+    }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
     def lifecycle_version = '2.3.1'
+    def mockk_version = '1.11.0'
+    def coroutines_version = '1.4.3'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
@@ -57,12 +64,22 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.activity:activity-ktx:1.2.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'io.strikt:strikt-core:0.30.1'
+    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'com.jraska.livedata:testing-ktx:1.1.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation "io.mockk:mockk-android:$mockk_version"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
 }
