--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -22,7 +22,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        
+        jcenter()
     }
 }
 
