--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ android {
 
     defaultConfig {
         applicationId "com.example.diffutilrv"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 30
         multiDexEnabled true
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.diffutilrv.EmployeeTestRunner"
     }
 
     buildTypes {
@@ -54,6 +54,7 @@ dependencies {
     def lifecycle_version = '2.3.1'
     def mockk_version = '1.11.0'
     def coroutines_version = '1.4.3'
+    def espresso_version = '3.3.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
@@ -74,12 +75,17 @@ dependencies {
     testImplementation 'io.strikt:strikt-core:0.30.1'
     testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
-    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test:core-ktx:1.3.0'
     testImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$dagger_version"
+    androidTestImplementation 'androidx.test:core-ktx:1.3.0'
+    kaptAndroidTest "com.google.dagger:hilt-compiler:$dagger_version"
 }
