--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,37 @@
 
 buildscript {
     ext {
+        //>>> App Version
+        appVesionCode = 1
+        appVesionName = "1.0"
+
+        //>>> Android Config
+        minSdkVersion = 16
+        targetSdkVersion = 30
+        compileSdkVersion = 30
+        buildToolsVersion = "30.0.3"
+
+        //>>> Dependencies
         // JetBrains
         // https://kotlinlang.org/docs/releases.html#release-details
         kotlin_version = '1.4.32'
         coroutine_version = '1.4.3'
 
-        // Google
-        // https://developer.android.com/jetpack/androidx/releases/lifecycle
-        lifecycle_version = '2.3.1'
-        // https://developer.android.com/jetpack/androidx/releases/arch-core
-        arch_core_version = '2.1.0'
-        // https://developer.android.com/jetpack/androidx/releases/test
+        // Google: AndroidX https://developer.android.com/jetpack/androidx/versions
+        agp_version = '4.1.3'
+        androidx_appcompat_version = '1.3.0-rc01'
+        androidx_arch_core_version = '2.1.0'
+        androidx_constranitlayout_version = '2.0.4'
+        androidx_core_version = '1.3.2'
+        androidx_lifecycle_version = '2.3.1'
+        androidx_recyclerview_version = '1.2.0'
         androidx_test_version = '1.3.0'
+        androidx_test_espresso_version = '3.3.0'
+        androidx_test_ext_junit_version = '1.1.2'
+
+        junit_version = '4.13.1'
+        mockk_version = '1.9.3'
+
     }
     repositories {
         google()
@@ -21,7 +40,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "com.android.tools.build:gradle:$agp_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
