--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,11 @@ android {
         }
     }
 
+    lintOptions {
+        disable "UnsafeExperimentalUsageError",
+                "UnsafeExperimentalUsageWarning"
+    }
+
 }
 
 dependencies {
