--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    viewBinding {
+
+    dataBinding {
         enabled = true
     }
 
